<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inventory App</string>
    <string name="database_info">The books table contains <xliff:g example="6" id="numberOfBooks">%d</xliff:g>  books.\n\n</string>
    <string name="product">Product</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="dollar">$</string>
    <string name="quantity">Quantity: </string>
    <string name="quantity_hint">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty_view_text">No books to read? \n Add some books from the floating button</string>
    <string name="author">Author</string>
    <string name="search_title">search</string>
    <string name="settings_title">Search</string>
    <string name="settings_search_name_key">name</string>
    <string name="settings_search_name_label">Name</string>
    <string name="settings_search_author_key">author</string>
    <string name="settings_search_author_label">Author</string>
    <string name="dollar_sign">$</string>
    <string name="no_books_to_sell">You cannot sell a book you no longer have.</string>
    <string name="insert_book">Insert Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="discard_message">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_message">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="failed_delete_message">Failed to delete book.</string>
    <string name="deleted_message">Book deleted.</string>
    <string name="failed_insert_message">Failed to insert new book!</string>
    <string name="saved_message">Successfully saved book.</string>
    <string name="failed_update_message">Failed to update book!</string>
    <string name="update_message">Successfully updated book!</string>
    <string name="fill_product_name">Please fill the product name.</string>
    <string name="fill_product_author">Please fill the product author.</string>
    <string name="fill_product_price">Please fill the product price</string>
    <string name="fill_product_quantity">Please fill the product quantity</string>
    <string name="fill_supplier_name">Please fill the suppliers name</string>
    <string name="fill_supplier_phone_number">Please fill the suppliers phone number</string>
    <string name="invalid_phone">Invalid phone number.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order">Order</string>
    <string name="sold">Sold</string>
    <string name="save">Save</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="searchLabel">Search</string>
</resources>
