<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/mainLinearLayoutPadding">

        <LinearLayout
            style="@style/categoryLinearLayout">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product" />

            <LinearLayout
                style="@style/linearLayout">

                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_product_author"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/author"
                    android:inputType="textCapWords" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_product_price"
                        style="@style/EditorFieldStyle"
                        android:layout_width="@dimen/priceEditWidth"
                        android:hint="@string/price"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/label_weight_units"
                        style="@style/EditorUnitsStyle"
                        android:text="@string/dollar" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="@dimen/quantityEditWidth"
                    android:hint="@string/quantity_hint"
                    android:inputType="number" />

                <LinearLayout
                    android:id="@+id/quantity_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minus_button"
                        style="@style/buttonsStyle"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/product_quantity_text_view"
                        android:layout_width="@dimen/quantityTextWidth"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/quantityTextSize"/>

                    <Button
                        android:id="@+id/plus_button"
                        style="@style/buttonsStyle"
                        android:text="@string/plus" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/categoryLinearLayout">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier" />

            <LinearLayout
                style="@style/linearLayout">

                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_supplier_phone_number"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        style="@style/orderButton"
        android:text="@string/order" />
</RelativeLayout>